--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "format": "turbo run format",
+    "format:fix": "turbo run format:fix",
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
