--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,17 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
+    "lint:fix": {
+      "dependsOn": ["^lint:fix"],
+      "cache": false
+    },
+    "format": {
+      "dependsOn": ["^format"]
+    },
+    "format:fix": {
+      "dependsOn": ["^format:fix"],
+      "cache": false
+    },
     "check-types": {
       "dependsOn": ["^check-types"]
     },
