--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "@the-stack/frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "biome lint",
-    "lint:fix": "biome lint --fix",
-    "format": "biome format",
-    "format:fix": "biome format --fix",
-    "check-types": "tsc --noEmit"
-  },
-  "dependencies": {
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@the-stack/biome-config": "workspace:*",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "@the-stack/frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome lint",
+		"lint:fix": "biome lint --fix",
+		"format": "biome format",
+		"format:fix": "biome format --fix",
+		"check-types": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@tailwindcss/postcss": "^4.0.8",
+		"next": "15.1.7",
+		"postcss": "^8.5.3",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwindcss": "^4.0.8"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@the-stack/biome-config": "workspace:*",
+		"@the-stack/tailwind-theme": "workspace:*",
+		"@types/node": "^22.13.5",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"typescript": "^5.7.3"
+	}
 }
