--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "turbo run lint:fix",
     "format": "turbo run format",
     "format:fix": "turbo run format:fix",
+    "test": "turbo run test",
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
