--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,12 +12,14 @@
 		"check-types": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/postcss": "^4.0.8",
 		"next": "15.1.7",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"tailwindcss": "^4.0.8"
+		"tailwindcss": "^4.0.8",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
