--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,12 +13,12 @@
 	},
 	"dependencies": {
 		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tailwindcss/postcss": "^4.0.8",
-		"next": "15.1.7",
+		"@tailwindcss/postcss": "^4.0.9",
+		"next": "15.2.0",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"tailwindcss": "^4.0.8",
+		"tailwindcss": "^4.0.9",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
@@ -28,6 +28,7 @@
 		"@types/node": "^22.13.5",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
+		"react-scan": "^0.2.7",
 		"typescript": "^5.7.3"
 	}
 }
