--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,7 +14,9 @@
 	"dependencies": {
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/postcss": "^4.0.9",
+		"deepmerge-json": "^1.5.0",
 		"next": "15.2.0",
+		"next-intl": "^3.26.5",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
