--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
 		"deepmerge-json": "^1.5.0",
 		"next": "15.2.0",
 		"next-intl": "^3.26.5",
+		"nuqs": "^2.4.0",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
