--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,7 +22,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwindcss": "^4.0.9",
-		"zod": "^3.24.2"
+		"zod": "^3.24.2",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
