--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/postcss": "^4.0.9",
+		"@tanstack/react-query": "^5.66.9",
 		"deepmerge-json": "^1.5.0",
 		"next": "15.2.0",
 		"next-intl": "^3.26.5",
