--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,13 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
         with:
           node-version: 22
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install
@@ -33,12 +34,13 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
         with:
           node-version: 22
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install
@@ -55,12 +57,13 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
         with:
           node-version: 22
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install
@@ -77,12 +80,13 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
         with:
           node-version: 22
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install
@@ -100,12 +104,13 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
         with:
           node-version: 22
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install
