--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: "[CI]"
 on: [pull_request]
 
+env: 
+  TURBO_TELEMETRY_DISABLED: 1
+  NEXT_TELEMETRY_DISABLED: 1
+
 jobs:
   lint:
     name: "💅 Lint"
@@ -34,7 +38,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.5.2
+          version: 10.5.2 
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
