--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,12 +15,11 @@
 	},
 	"scripts": {
 		"dev": "vite build --watch",
-		"build": "vite build",
+		"build": "tsc -b && vite build",
 		"lint": "biome lint",
 		"lint:fix": "biome lint --fix",
 		"format": "biome format",
-		"format:fix": "biome format --fix",
-		"check-types": "tsc --noEmit"
+		"format:fix": "biome format --fix"
 	},
 	"peerDependencies": {
 		"react": "^19.0.0",
