--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,8 +8,7 @@
 		"lint": "biome lint",
 		"lint:fix": "biome lint --fix",
 		"format": "biome format",
-		"format:fix": "biome format --fix",
-		"check-types": "tsc --noEmit"
+		"format:fix": "biome format --fix"
 	},
 	"dependencies": {
 		"@the-stack/ui": "workspace:*",
