--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: "[CI]"
 on: [pull_request]
 
+env: 
+  TURBO_TELEMETRY_DISABLED: 1
+  NEXT_TELEMETRY_DISABLED: 1
+
 jobs:
   lint:
     name: "💅 Lint"
@@ -11,7 +15,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
@@ -34,7 +38,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2 
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
@@ -48,29 +52,6 @@ jobs:
       - name: Format
         run: pnpm format
 
-  typecheck:
-    name: "🔎 Typescheck"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.0.0
-
-      - name: "Use Node.Js"
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Typecheck
-        run: pnpm check-types
-
   test:
     name: "🧪 Test"
     runs-on: ubuntu-latest
@@ -80,7 +61,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
@@ -97,14 +78,14 @@ jobs:
   build:
     name: "📦 Build"
     runs-on: ubuntu-latest
-    needs: [lint, format, typecheck, test]
+    needs: [lint, format, test]
     steps:
       - uses: actions/checkout@v3
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.0.0
+          version: 10.5.2
 
       - name: "Use Node.Js"
         uses: actions/setup-node@v3
