--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,10 +8,10 @@
 		"lint": "biome lint",
 		"lint:fix": "biome lint --fix",
 		"format": "biome format",
-		"format:fix": "biome format --fix",
-		"check-types": "tsc --noEmit"
+		"format:fix": "biome format --fix"
 	},
 	"dependencies": {
+		"@the-stack/ui": "workspace:*",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/postcss": "^4.0.9",
 		"@tanstack/react-query": "^5.66.9",
@@ -22,6 +22,7 @@
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"@the-stack/tailwind-theme": "workspace:*",
 		"tailwindcss": "^4.0.9",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
@@ -29,7 +30,6 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@the-stack/biome-config": "workspace:*",
-		"@the-stack/tailwind-theme": "workspace:*",
 		"@types/node": "^22.13.5",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
