--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "lint:fix": "turbo run lint:fix",
     "format": "turbo run format",
     "format:fix": "turbo run format:fix",
-    "test": "turbo run test",
-    "check-types": "turbo run check-types"
+    "test": "turbo run test"
   },
   "devDependencies": {
     "turbo": "^2.4.4",
     "typescript": "5.7.3"
   },
-  "packageManager": "pnpm@10.0.0",
+  "packageManager": "pnpm@10.5.2",
   "engines": {
     "node": ">=22"
   }
