--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -20,9 +20,6 @@
     "format:fix": {
       "dependsOn": ["^format:fix"],
       "cache": false
-    },
-    "check-types": {
-      "dependsOn": ["^check-types"]
     },
     "test": {
       "dependsOn": ["^test"]
