--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,29 +11,29 @@
 		"format:fix": "biome format --fix"
 	},
 	"dependencies": {
-		"@the-stack/ui": "workspace:*",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/postcss": "^4.0.9",
 		"@tanstack/react-query": "^5.66.9",
+		"@the-stack/tailwind-theme": "workspace:*",
+		"@the-stack/ui": "workspace:*",
 		"deepmerge-json": "^1.5.0",
-		"next": "15.2.0",
+		"next": "^15.2.0",
 		"next-intl": "^3.26.5",
 		"nuqs": "^2.4.0",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"@the-stack/tailwind-theme": "workspace:*",
 		"tailwindcss": "^4.0.9",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "^1.9.4",
 		"@the-stack/biome-config": "workspace:*",
 		"@types/node": "^22.13.5",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
-		"react-scan": "^0.2.7",
+		"react-scan": "^0.2.8",
 		"typescript": "^5.7.3"
 	}
 }
