--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,21 +22,21 @@
 		"format:fix": "biome format --fix"
 	},
 	"peerDependencies": {
+		"@the-stack/tailwind-theme": "workspace:*",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"tailwindcss": "^4.0.9",
-		"@the-stack/tailwind-theme": "workspace:*"
+		"tailwindcss": "^4.0.9"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "^1.9.4",
 		"@tailwindcss/vite": "^4.0.9",
 		"@the-stack/biome-config": "workspace:*",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
 		"globals": "^16.0.0",
-		"typescript": "~5.7.2",
+		"typescript": "^5.7.2",
 		"vite": "^6.2.0",
-		"vite-plugin-dts": "^4.5.0"
+		"vite-plugin-dts": "^4.5.1"
 	}
 }
