--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,8 @@
 		"lint": "biome lint",
 		"lint:fix": "biome lint --fix",
 		"format": "biome format",
-		"format:fix": "biome format --fix"
+		"format:fix": "biome format --fix",
+		"storybook": "storybook dev -p 6006"
 	},
 	"peerDependencies": {
 		"@the-stack/tailwind-theme": "workspace:*",
@@ -29,12 +30,20 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
+		"@chromatic-com/storybook": "^3.2.5",
+		"@storybook/addon-essentials": "^8.6.2",
+		"@storybook/addon-interactions": "^8.6.2",
+		"@storybook/blocks": "^8.6.2",
+		"@storybook/react": "^8.6.2",
+		"@storybook/react-vite": "^8.6.2",
+		"@storybook/test": "^8.6.2",
 		"@tailwindcss/vite": "^4.0.9",
 		"@the-stack/biome-config": "workspace:*",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
 		"globals": "^16.0.0",
+		"storybook": "^8.6.2",
 		"typescript": "^5.7.2",
 		"vite": "^6.2.0",
 		"vite-plugin-dts": "^4.5.1"
