feat(ui): create button component

--- a/packages/ui/.vscode/settings.json
+++ b/packages/ui/.vscode/settings.json
@@ -17,9 +17,7 @@
 		"*.css": "tailwindcss"
 	},
 	"tailwindCSS.experimental.classRegex": [
-		["clsx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"],
-		["cn\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"],
-		["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
-		["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
-	]
+		["cn\\(((?:[^()]|\\([^()]*\\))*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+	],
+	"tailwindCSS.lint.cssConflict": "ignore"
 }
