--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,28 +24,25 @@
 	},
 	"peerDependencies": {
 		"@the-stack/tailwind-theme": "workspace:*",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"tailwindcss": "^4.0.9",
 		"clsx": "^2.1.1",
 		"motion": "^12.4.7",
-		"tailwind-merge": "^3.0.2"
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss": "^4.0.9"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@chromatic-com/storybook": "^3.2.5",
 		"@storybook/addon-essentials": "^8.6.2",
-		"@storybook/addon-interactions": "^8.6.2",
-		"@storybook/blocks": "^8.6.2",
 		"@storybook/react": "^8.6.2",
 		"@storybook/react-vite": "^8.6.2",
-		"@storybook/test": "^8.6.2",
 		"@tailwindcss/vite": "^4.0.9",
 		"@the-stack/biome-config": "workspace:*",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
 		"globals": "^16.0.0",
+		"rollup-preserve-directives": "^1.1.3",
 		"storybook": "^8.6.2",
 		"typescript": "^5.7.2",
 		"vite": "^6.2.0",
