--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,14 +4,7 @@
 	"type": "module",
 	"sideEffects": false,
 	"exports": {
-		"./components": {
-			"import": "./dist/components.js",
-			"types": "./dist/components.d.ts"
-		},
-		"./icons": {
-			"import": "./dist/icons.js",
-			"types": "./dist/icons.d.ts"
-		}
+		"./components/*": "./dist/components/*.js"
 	},
 	"scripts": {
 		"dev": "vite build --watch",
@@ -33,9 +26,9 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@storybook/addon-essentials": "^8.6.2",
-		"@storybook/react": "^8.6.2",
-		"@storybook/react-vite": "^8.6.2",
+		"@storybook/addon-essentials": "^8.6.3",
+		"@storybook/react": "^8.6.3",
+		"@storybook/react-vite": "^8.6.3",
 		"@tailwindcss/vite": "^4.0.9",
 		"@the-stack/biome-config": "workspace:*",
 		"@types/react": "^19.0.10",
@@ -43,8 +36,8 @@
 		"@vitejs/plugin-react": "^4.3.4",
 		"globals": "^16.0.0",
 		"rollup-preserve-directives": "^1.1.3",
-		"storybook": "^8.6.2",
-		"typescript": "^5.7.2",
+		"storybook": "^8.6.3",
+		"typescript": "^5.8.2",
 		"vite": "^6.2.0",
 		"vite-plugin-dts": "^4.5.1"
 	}
