--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,8 @@
 	"type": "module",
 	"sideEffects": false,
 	"exports": {
-		"./components/*": "./dist/components/*.js"
+		"./components/*": "./dist/components/*.js",
+		"./icons": "./dist/icons/*.js"
 	},
 	"scripts": {
 		"dev": "vite build --watch",
