fix: vscode import

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,7 @@
 	"sideEffects": false,
 	"exports": {
 		"./components/*": "./dist/components/*.js",
-		"./icons": "./dist/icons/*.js"
+		"./icons": "./dist/icons.js"
 	},
 	"scripts": {
 		"dev": "vite build --watch",
