--- a/apps/frontend/.vscode/settings.json
+++ b/apps/frontend/.vscode/settings.json
@@ -23,5 +23,6 @@
 		["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
 	],
 
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"typescript.preferences.includePackageJsonAutoImports": "on"
 }
