--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,18 +11,23 @@
 		"format:fix": "biome format --fix"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^4.1.2",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/postcss": "^4.0.9",
 		"@tanstack/react-query": "^5.66.11",
 		"@the-stack/tailwind-theme": "workspace:*",
 		"@the-stack/ui": "workspace:*",
+		"clsx": "^2.1.1",
 		"deepmerge-json": "^1.5.0",
+		"motion": "^12.4.7",
 		"next": "^15.2.0",
 		"next-intl": "^3.26.5",
 		"nuqs": "^2.4.0",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"tailwind-merge": "^3.0.2",
 		"tailwindcss": "^4.0.9",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
