feat(backend/frontend): setup tuyau

--- a/apps/backend/biome.json
+++ b/apps/backend/biome.json
@@ -1,4 +1,11 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-	"extends": ["@the-stack/biome-config/base"]
+	"extends": ["@the-stack/biome-config/base"],
+	"linter": {
+		"rules": {
+			"style": {
+				"useImportType": "off"
+			}
+		}
+	}
 }
