--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,6 +2,9 @@
 	"name": "@the-stack/backend",
 	"private": true,
 	"type": "module",
+	"exports": {
+		"./api": "./.adonisjs/index.ts"
+	},
 	"scripts": {
 		"dev": "node ace serve --hmr",
 		"build": "node ace build",
@@ -13,6 +16,7 @@
 	},
 	"imports": {
 		"#controllers/*": "./app/controllers/*.js",
+		"#presenters/*": "./app/presenters/*.js",
 		"#exceptions/*": "./app/exceptions/*.js",
 		"#models/*": "./app/models/*.js",
 		"#mails/*": "./app/mails/*.js",
@@ -30,7 +34,6 @@
 		"#config/*": "./config/*.js"
 	},
 	"devDependencies": {
-		"@the-stack/biome-config": "workspace:*",
 		"@adonisjs/assembler": "^7.8.2",
 		"@adonisjs/tsconfig": "^1.4.0",
 		"@biomejs/biome": "^1.9.4",
@@ -39,6 +42,8 @@
 		"@japa/plugin-adonisjs": "^4.0.0",
 		"@japa/runner": "^4.2.0",
 		"@swc/core": "1.10.7",
+		"@the-stack/biome-config": "workspace:*",
+		"@tuyau/utils": "^0.0.7",
 		"@types/luxon": "^3.4.2",
 		"@types/node": "^22.13.2",
 		"hot-hook": "^0.4.0",
@@ -52,6 +57,7 @@
 		"@adonisjs/cors": "^2.2.1",
 		"@adonisjs/lucid": "^21.6.0",
 		"@adonisjs/session": "^7.5.1",
+		"@tuyau/core": "^0.3.2",
 		"@vinejs/vine": "^3.0.0",
 		"luxon": "^3.5.0",
 		"pg": "^8.13.3",
