--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,12 +11,14 @@
 		"format:fix": "biome format --fix"
 	},
 	"dependencies": {
+		"@the-stack/backend": "workspace:*",
 		"@hookform/resolvers": "^4.1.2",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/postcss": "^4.0.9",
 		"@tanstack/react-query": "^5.66.11",
 		"@the-stack/tailwind-theme": "workspace:*",
 		"@the-stack/ui": "workspace:*",
+		"@tuyau/client": "^0.2.6",
 		"clsx": "^2.1.1",
 		"deepmerge-json": "^1.5.0",
 		"motion": "^12.4.7",
