--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,8 @@ jobs:
       - name: Test
         run: pnpm test
 
-  build:
-    name: "📦 Build"
+  build-packages:
+    name: "📦 Build Packages"
     runs-on: ubuntu-latest
     needs: [lint, format, test]
     steps:
@@ -97,4 +97,44 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm build
+        run: pnpm build --filter "./packages/*"
+
+  build-frontend:
+    name: "📦 Build Frontend"
+    runs-on: ubuntu-latest
+    needs: [lint, format, test]
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build
+        uses: docker/build-push-action@v6
+        with:
+          file: ./apps/frontend/Dockerfile
+          context: .
+          push: false
+
+  build-backend:
+    name: "📦 Build Backend"
+    runs-on: ubuntu-latest
+    needs: [lint, format, test]
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build
+        uses: docker/build-push-action@v6
+        with:
+          file: ./apps/backend/Dockerfile
+          context: .
+          push: false
