--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Create .env file
+        run: |
+          touch .env
+          echo "NEXT_PUBLIC_BACKEND_URL=http://localhost:3000" >> .env
+          cat .env
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
