--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,30 +75,6 @@ jobs:
       - name: Test
         run: pnpm test
 
-  build-packages:
-    name: "📦 Build Packages"
-    runs-on: ubuntu-latest
-    needs: [lint, format, test]
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.5.2
-
-      - name: "Use Node.Js"
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22.14.0
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build
-        run: pnpm build --filter "./packages/*"
-
   build-frontend:
     name: "📦 Build Frontend"
     runs-on: ubuntu-latest
@@ -106,11 +82,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Create .env file
+      - name: Create .env
         run: |
-          touch .env
-          echo "NEXT_PUBLIC_BACKEND_URL=http://localhost:3000" >> .env
-          cat .env
+          echo ${{ secrets.frontend_env }} > .env.frontend
+          echo ${{ secrets.backend_env }} > .env.backend
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -131,6 +106,11 @@ jobs:
     needs: [lint, format, test]
     steps:
       - uses: actions/checkout@v3
+
+      - name: Create .env
+        run: |
+          echo ${{ secrets.frontend_env }} > .env.frontend
+          echo ${{ secrets.backend_env }} > .env.backend
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
