fix(CI) env variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,8 +84,8 @@ jobs:
 
       - name: Create .env
         run: |
-          echo ${{ secrets.FRONTEND_ENV }} > .env.frontend
-          echo ${{ secrets.BACKEND_ENV }} > .env.backend
+          echo "${{ secrets.FRONTEND_ENV }}" > .env.frontend
+          echo "${{ secrets.BACKEND_ENV }}" > .env.backend
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -109,8 +109,8 @@ jobs:
 
       - name: Create .env
         run: |
-          echo ${{ secrets.FRONTEND_ENV }} > .env.frontend
-          echo ${{ secrets.BACKEND_ENV }} > .env.backend
+          echo "${{ secrets.FRONTEND_ENV }}" > .env.frontend
+          echo "${{ secrets.BACKEND_ENV }}" > .env.backend
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
