--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,12 +1,17 @@
-TZ=UTC
-PORT=3333
-HOST=localhost
-LOG_LEVEL=info
-APP_KEY=
+# Environment
 NODE_ENV=development
+LOG_LEVEL=trace
+HOST=localhost
+PORT=3333
+TZ=UTC
+APP_KEY=********
+
+# Database
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=root
 DB_PASSWORD=root
 DB_DATABASE=app
+
+# Session
 SESSION_DRIVER=cookie
