--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -41,15 +41,15 @@
 		"@japa/assert": "^4.0.1",
 		"@japa/plugin-adonisjs": "^4.0.0",
 		"@japa/runner": "^4.2.0",
-		"@swc/core": "1.10.7",
+		"@swc/core": "1.11.5",
 		"@the-stack/biome-config": "workspace:*",
 		"@tuyau/utils": "^0.0.7",
 		"@types/luxon": "^3.4.2",
-		"@types/node": "^22.13.2",
+		"@types/node": "^22.13.9",
 		"hot-hook": "^0.4.0",
 		"pino-pretty": "^13.0.0",
 		"ts-node-maintained": "^10.9.5",
-		"typescript": "~5.7"
+		"typescript": "~5.8.2"
 	},
 	"dependencies": {
 		"@adonisjs/auth": "^9.3.1",
@@ -64,7 +64,10 @@
 		"reflect-metadata": "^0.2.2"
 	},
 	"hotHook": {
-		"boundaries": ["./app/controllers/**/*.ts", "./app/middleware/*.ts"]
+		"boundaries": [
+			"./app/controllers/**/*.ts",
+			"./app/middleware/*.ts"
+		]
 	},
 	"prettier": "@adonisjs/prettier-config"
 }
