feat(backend/frontend): create basic auth system

--- a/apps/frontend/.vscode/settings.json
+++ b/apps/frontend/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+	// Search
+	"search.exclude": {
+		"**/.next": true
+	},
+
 	// BiomeJs Settings
 	"editor.defaultFormatter": "biomejs.biome",
 	"editor.formatOnSave": true,
