--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -58,6 +58,7 @@
 		"@adonisjs/lucid": "^21.6.0",
 		"@adonisjs/session": "^7.5.1",
 		"@tuyau/core": "^0.3.2",
+		"@tuyau/superjson": "^0.0.2",
 		"@vinejs/vine": "^3.0.0",
 		"luxon": "^3.5.0",
 		"pg": "^8.13.3",
