--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
 		"@the-stack/tailwind-theme": "workspace:*",
 		"@the-stack/ui": "workspace:*",
 		"@tuyau/client": "^0.2.6",
+		"@tuyau/superjson": "^0.0.2",
 		"clsx": "^2.1.1",
 		"deepmerge-json": "^1.5.0",
 		"motion": "^12.4.9",
@@ -29,6 +30,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
+		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss": "^4.0.9",
 		"zod": "^3.24.2",
