--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -65,10 +65,7 @@
 		"reflect-metadata": "^0.2.2"
 	},
 	"hotHook": {
-		"boundaries": [
-			"./app/controllers/**/*.ts",
-			"./app/middleware/*.ts"
-		]
+		"boundaries": ["./app/controllers/**/*.ts", "./app/middleware/*.ts"]
 	},
 	"prettier": "@adonisjs/prettier-config"
 }
