--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -41,15 +41,15 @@
 		"@japa/assert": "^4.0.1",
 		"@japa/plugin-adonisjs": "^4.0.0",
 		"@japa/runner": "^4.2.0",
-		"@swc/core": "1.10.7",
+		"@swc/core": "1.11.7",
 		"@the-stack/biome-config": "workspace:*",
 		"@tuyau/utils": "^0.0.7",
 		"@types/luxon": "^3.4.2",
-		"@types/node": "^22.13.2",
+		"@types/node": "^22.13.9",
 		"hot-hook": "^0.4.0",
 		"pino-pretty": "^13.0.0",
 		"ts-node-maintained": "^10.9.5",
-		"typescript": "~5.7"
+		"typescript": "~5.8.2"
 	},
 	"dependencies": {
 		"@adonisjs/auth": "^9.3.1",
@@ -58,6 +58,7 @@
 		"@adonisjs/lucid": "^21.6.0",
 		"@adonisjs/session": "^7.5.1",
 		"@tuyau/core": "^0.3.2",
+		"@tuyau/superjson": "^0.0.2",
 		"@vinejs/vine": "^3.0.0",
 		"luxon": "^3.5.0",
 		"pg": "^8.13.3",
