--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,24 +11,26 @@
 		"format:fix": "biome format --fix"
 	},
 	"dependencies": {
-		"@the-stack/backend": "workspace:*",
-		"@hookform/resolvers": "^4.1.2",
+		"@hookform/resolvers": "^4.1.3",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/postcss": "^4.0.9",
-		"@tanstack/react-query": "^5.66.11",
+		"@tanstack/react-query": "^5.67.1",
+		"@the-stack/backend": "workspace:*",
 		"@the-stack/tailwind-theme": "workspace:*",
 		"@the-stack/ui": "workspace:*",
 		"@tuyau/client": "^0.2.6",
+		"@tuyau/superjson": "^0.0.2",
 		"clsx": "^2.1.1",
 		"deepmerge-json": "^1.5.0",
-		"motion": "^12.4.7",
-		"next": "^15.2.0",
+		"motion": "^12.4.10",
+		"next": "^15.2.1",
 		"next-intl": "^3.26.5",
 		"nuqs": "^2.4.0",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
+		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss": "^4.0.9",
 		"zod": "^3.24.2",
@@ -37,10 +39,10 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@the-stack/biome-config": "workspace:*",
-		"@types/node": "^22.13.8",
+		"@types/node": "^22.13.9",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
-		"react-scan": "^0.2.8",
+		"react-scan": "^0.2.9",
 		"typescript": "^5.8.2"
 	}
 }
