feat(backend): send email on forgot password request

--- a/apps/backend/biome.json
+++ b/apps/backend/biome.json
@@ -5,6 +5,9 @@
 		"rules": {
 			"style": {
 				"useImportType": "off"
+			},
+			"correctness": {
+				"noUndeclaredVariables": "off"
 			}
 		}
 	}
