--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,6 +1,6 @@
 # Environment
 NODE_ENV=development
-LOG_LEVEL=trace
+LOG_LEVEL=info
 HOST=localhost
 PORT=3333
 TZ=UTC
@@ -15,3 +15,10 @@ DB_DATABASE=app
 
 # Session
 SESSION_DRIVER=cookie
+
+# Frontend
+FRONTEND_URL=http://localhost:3000
+
+# Mailing
+RESEND_API_KEY=********
+DEFAULT_FROM_EMAIL=contact@the-stack.dev
