--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -56,6 +56,7 @@
 		"@adonisjs/core": "^6.17.2",
 		"@adonisjs/cors": "^2.2.1",
 		"@adonisjs/lucid": "^21.6.0",
+		"@adonisjs/mail": "^9.2.2",
 		"@adonisjs/session": "^7.5.1",
 		"@tuyau/core": "^0.3.2",
 		"@tuyau/superjson": "^0.0.2",
