--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,6 +25,7 @@
 		"motion": "^12.4.10",
 		"next": "^15.2.1",
 		"next-intl": "^3.26.5",
+		"nextjs-toploader": "^3.7.15",
 		"nuqs": "^2.4.0",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
