--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -1,4 +1,7 @@
 NODE_ENV=development
 
+# FRONTEND
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+
 # API
 NEXT_PUBLIC_API_URL=http://localhost:3333
