feat(backend): add worker to send emails

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -19,3 +19,8 @@ SESSION_DRIVER=cookie
 # Mailing
 RESEND_API_KEY=********
 DEFAULT_FROM_EMAIL=contact@the-stack.dev
+
+# Queue
+QUEUE_REDIS_HOST=127.0.0.1
+QUEUE_REDIS_PORT=6379
+QUEUE_REDIS_PASSWORD=supersecret
