--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
 	},
 	"scripts": {
 		"dev": "node ace serve --hmr",
+		"worker": "node ace queue:listen --queue=email",
 		"build": "node ace build",
 		"start": "node bin/server.js",
 		"lint": "biome lint",
@@ -58,6 +59,7 @@
 		"@adonisjs/lucid": "^21.6.0",
 		"@adonisjs/mail": "^9.2.2",
 		"@adonisjs/session": "^7.5.1",
+		"@rlanz/bull-queue": "^3.1.0",
 		"@tuyau/core": "^0.3.2",
 		"@tuyau/superjson": "^0.0.2",
 		"@vinejs/vine": "^3.0.0",
