feat: reset password flow (#25)
* feat(frontend): create forgot-password page

* feat(frontend): remove prefetch

* fix(build)

* feat(frontend): refactor forms

* feat(frontend): reset-password

* fix(frontend): build

* feat(backend): split email to own file

* feat(backend): add worker to send emails

* fix(backend): type-check error

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,6 +1,6 @@
 # Environment
 NODE_ENV=development
-LOG_LEVEL=info
+LOG_LEVEL=debug
 HOST=localhost
 PORT=3333
 TZ=UTC
@@ -16,9 +16,11 @@ DB_DATABASE=app
 # Session
 SESSION_DRIVER=cookie
 
-# Frontend
-FRONTEND_URL=http://localhost:3000
-
 # Mailing
 RESEND_API_KEY=********
 DEFAULT_FROM_EMAIL=contact@the-stack.dev
+
+# Queue
+QUEUE_REDIS_HOST=127.0.0.1
+QUEUE_REDIS_PORT=6379
+QUEUE_REDIS_PASSWORD=supersecret
