--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,29 @@ jobs:
       - name: Format
         run: pnpm format
 
+  type-check:
+    name: "🔎 Type Check"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.5.2
+
+      - name: "Use Node.Js"
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.14.0
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Type Check
+        run: pnpm build --filter="./packages/*" && pnpm type-check
+
   test:
     name: "🧪 Test"
     runs-on: ubuntu-latest
@@ -78,7 +101,7 @@ jobs:
   build-frontend:
     name: "📦 Build Frontend"
     runs-on: ubuntu-latest
-    needs: [lint, format, test]
+    needs: [lint, format, type-check, test]
     steps:
       - uses: actions/checkout@v4
 
@@ -103,7 +126,7 @@ jobs:
   build-backend:
     name: "📦 Build Backend"
     runs-on: ubuntu-latest
-    needs: [lint, format, test]
+    needs: [lint, format, type-check, test]
     steps:
       - uses: actions/checkout@v4
 
