--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,7 +8,8 @@
 		"lint": "biome lint",
 		"lint:fix": "biome lint --fix",
 		"format": "biome format",
-		"format:fix": "biome format --fix"
+		"format:fix": "biome format --fix",
+		"type-check": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
