--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "turbo run lint:fix",
     "format": "turbo run format",
     "format:fix": "turbo run format:fix",
+    "type-check": "turbo run type-check",
     "test": "turbo run test"
   },
   "devDependencies": {
