--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,7 @@
 		"lint:fix": "biome lint --fix",
 		"format": "biome format",
 		"format:fix": "biome format --fix",
+		"type-check": "tsc --noEmit",
 		"storybook": "storybook dev -p 6006"
 	},
 	"peerDependencies": {
