--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,12 +4,10 @@
 	"type": "module",
 	"sideEffects": false,
 	"exports": {
-		"./components/*": "./dist/components/*.js",
-		"./icons": "./dist/icons.js"
+		"./components/*": "./src/components/*.tsx",
+		"./icons": "./src/icons/index.ts"
 	},
 	"scripts": {
-		"dev": "vite build --watch",
-		"build": "tsc -b && vite build",
 		"lint": "biome lint",
 		"lint:fix": "biome lint --fix",
 		"format": "biome format",
@@ -37,10 +35,8 @@
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
 		"globals": "^16.0.0",
-		"rollup-preserve-directives": "^1.1.3",
 		"storybook": "^8.6.3",
 		"typescript": "^5.8.2",
-		"vite": "^6.2.0",
-		"vite-plugin-dts": "^4.5.3"
+		"vite": "^6.2.0"
 	}
 }
