--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -9,6 +9,7 @@
 		"esModuleInterop": true,
 		"module": "esnext",
 		"experimentalDecorators": true,
+		"allowImportingTsExtensions": true,
 		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
